# gvrbot_simulation

./: CMakeLists.txt  Notes.txt  package.xml
launch/: gvrbot_gazebo.launch  gvrbot_gazebo2.launch  gvrbot_spawn.launch  spawn_gvrbot.launch  xbox360_teleop.launch
models/meshes/: base_linkV2.STL  base_linkV2.dae  base_linkV3.dae
models/robots/: README.md  basic_colors.urdf.xacro  gvr_base.urdf.xacro  gvr_base.urdf.xacro~  gvr_baseV2.urdf.xacro  gvr_bot.urdf.xacro  gvr_bot.urdf.xacro~  gvr_bot_velodyne.urdf.xacto  inertial_tensors.urdf.xacro  model.urdf  obelix_ugv_base.xacro  plexiglass_mount.urdf.xacro  single_wheel.urdf.xacro  temp.urdf~  tracked_wheel.urdf.xacro
